fixing font family on portfolio covers

--- a/src/styles/_portfolio.scss
+++ b/src/styles/_portfolio.scss
@@ -11,7 +11,8 @@
     height: 320px;
     padding: 20px;
     font-size: 2em;
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Indie Flower', cursive;
+    font-weight: bold;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     text-shadow: 1px 1px 2px black;
     border-radius: 6px;
